--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Snake game</title>
+    <script src="game.js" defer type="module"></script>
+
+    <style>
+        body {
+            height: 100vh; 
+            width: 100vw;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+            background-color: black;
+        }
+
+        #game-board {
+            background-color: #ccc;
+            width: 100vmin;
+            height: 100vmin;
+            display: grid;
+            grid-template-rows: repeat(21, 1fr);
+            grid-template-columns: repeat(21, 1fr);
+        }
+
+        .snake {
+            background-color: blue;
+            border: .25vmin solid black;
+        }
+
+        .food {
+            background-color: yellow;
+            border: .25vmin solid black;
+        }
+    </style>
 </head>
 <body>
-    <h3>yes</h3>
+    <div id="game-board"></div>
 </body>
 </html>
